@@ -139,6 +139,16 @@
   "workOnJobParticleEffectNames" : [ "Small leaf explosion" ],
   "accessedFromAdjacentTile" : false
 }, {
+  "name" : "HARVEST_FROM_FURNITURE",
+  "overrideI18nKey" : "ACTION.JOB.HARVESTING",
+  "removeJobWhenAssignmentCancelled" : false,
+  "haulItemWhileWorking" : false,
+  "requiresWeapon" : false,
+  "usesWorkstationTool" : false,
+  "defaultTimeToCompleteJob" : 4.0,
+  "activeSoundAssetName" : "HarvestingCrops",
+  "accessedFromAdjacentTile" : true
+}, {
   "name" : "CLEAR_GROUND",
   "overrideI18nKey" : "ACTION.JOB.CLEAR_GROUND",
   "removeJobWhenAssignmentCancelled" : false,
