@@ -29,9 +29,9 @@
   "definitions/types/floorTypes.json" : -7795907128060816893,
   "definitions/types/furnitureCategories.json" : 939981818843092426,
   "definitions/types/furnitureLayouts.json" : 2437182693154517940,
-  "definitions/types/furnitureTypes.json" : -1768360680396789332,
+  "definitions/types/furnitureTypes.json" : -9129121771411353292,
   "definitions/types/itemTypes.json" : -6954342983273106048,
-  "definitions/types/jobTypes.json" : 6833606810863251871,
+  "definitions/types/jobTypes.json" : 3037313552060858533,
   "definitions/types/mechanismTypes.json" : -3423425260839881450,
   "definitions/types/ongoingEffectTypes.json" : -2245878883697869623,
   "definitions/types/overlapTypes.json" : -4307203000983488310,
