@@ -22,7 +22,7 @@
     },
     "tags": {
       "LIQUID_CONTAINER": ["4", "Water", "ALWAYS_INACTIVE"],
-      "FURNITURE_BEHAVIOUR": ["MUSHROOM_SHOCK_TANK", "ItemType_Product-Bucket", "ItemType_Resource-Mushroom-Log", "ItemType_Resource-Shocked-Mushroom-Log"]
+      "FURNITURE_BEHAVIOUR": ["MUSHROOM_SHOCK_TANK", "ItemType_Product-Bucket", "ItemType_Resource-Mushroom-Log", "ItemType_Resource-Shocked-Mushroom-Log", "JobType_HAULING"]
     }
   },
   {
